Villanova_Dev1/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Banner_Camp_ID__c</fullName>
        <inlineHelpText>Abbreviated campaign ID</inlineHelpText>
        <label>Banner Camp ID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Boolean__c</fullName>
        <label>Boolean</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmation_Text__c</fullName>
        <label>Confirmation Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Registration__c</fullName>
        <label>Current Registration</label>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>Registered</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Current_Wait_List__c</fullName>
        <label>Current Wait List</label>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>Wait List</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Campaign Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Name)&lt;5,&quot;Meaningful Campaign Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Status ,&quot;&quot;), &quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT(MONTH( StartDate )))=0, &quot;Start Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT(MONTH( EndDate )))=0, &quot;End Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(NumberOfContacts  +  NumberOfLeads = 0, &quot;No Associated Members, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT( ExpectedRevenue ))=0, &quot;Expected Revenue&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN(  Name  ) &lt; 5, 0,20) + IF(ISPICKVAL(  Type ,&quot;&quot; ), 0,20) + IF(ISPICKVAL( Status ,&quot;&quot; ), 0,20) + IF(LEN( TEXT(MONTH( StartDate )))= 0, 0,10) + IF( LEN(TEXT(MONTH( EndDate ))) = 0, 0,10) + IF(  NumberOfContacts  +  NumberOfLeads = 0, 0,10)  + IF( LEN( TEXT( ExpectedRevenue ) ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Display_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Event_Details_Header__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Event Details Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Speaker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Speaker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Use_VU_Web_Wrapper__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Use VU Web Wrapper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Encrypted_Key__c</fullName>
        <label>Encrypted Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Venue__c</fullName>
        <label>Event Venue</label>
        <referenceTo>Venue__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Attendee Groups</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registration_Limit__c</fullName>
        <label>Registration Limit</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Site__c</fullName>
        <description>Service Site Assignment</description>
        <inlineHelpText>Select the service site that this group is assigned to.</inlineHelpText>
        <label>Service Site</label>
        <referenceTo>Service_Site__c</referenceTo>
        <relationshipLabel>Assigned Groups</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <label>Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker__c</fullName>
        <label>Speaker</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Submit_Button_Label__c</fullName>
        <description>This field stores the possible values a form submission button can take</description>
        <label>Submit Button Label</label>
        <picklist>
            <picklistValues>
                <fullName>Register</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submittal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Wait_List_Limit__c</fullName>
        <label>Wait List Limit</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Web_Description__c</fullName>
        <label>Web Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Web_Page_Public__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Web Page Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_Wrapper__c</fullName>
        <label>Web Wrapper</label>
        <picklist>
            <picklistValues>
                <fullName>Wrapper</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No Wrapper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No CSS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Where_Clause__c</fullName>
        <description>Used to the store the SoQL where clause generated by the Boolean logic and Criteria records associated with Attendee Groups.</description>
        <label>Where Clause</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>Advancement_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Banner_Camp_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Advancement Campaigns</label>
    </listViews>
    <listViews>
        <fullName>AllCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CAMPAIGN.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
    </listViews>
    <listViews>
        <fullName>EMBA_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>EMBA</value>
        </filters>
        <label>EMBA Campaigns</label>
        <sharedTo>
            <rolesAndSubordinates>VU System Administrator</rolesAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMBA_Class_2</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>EMBA Class 2</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Non_Dos</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>notContain</operation>
            <value>Dos:</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>notContain</operation>
            <value>- All</value>
        </filters>
        <label>Non-Dos</label>
    </listViews>
    <listViews>
        <fullName>temp</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <label>temp</label>
    </listViews>
    <recordTypes>
        <fullName>Event</fullName>
        <active>true</active>
        <label>Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event_Attendee_Group</fullName>
        <active>true</active>
        <label>Event Attendee Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Campaign</fullName>
        <active>true</active>
        <label>Standard Campaign</label>
    </recordTypes>
</CustomObject>